[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enimy.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://ground.png" type="Texture" id=5]
[ext_resource path="res://btn.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -25, -26, 0, 0, 0, 0, 1299, -27, 0, 0, 0, 0, 1306, 951.54, 0, 0, 0, 0, 627, 961.511, 0, 0, 0, 0, -41, 936.028, 0, 0, 0, 0, -28, -29 )
}

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=4]
0/name = "ground.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 3 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 603, 393 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
collision_mask = 1

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 0, -2.82564 )
scale = Vector2( 1, 0.902564 )
curve = SubResource( 1 )

[node name="MobSpawnLocation2" type="PathFollow2D" parent="MobPath"]
position = Vector2( -25, -26 )
rotation = -0.000755115

[node name="right" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 279.337, 700.677 )
scale = Vector2( -3.82076, -3.46099 )
normal = ExtResource( 6 )
shape = SubResource( 2 )
action = "move_right"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -1, 590 )
scale = Vector2( 3.9375, 3.4375 )
normal = ExtResource( 6 )
shape = SubResource( 2 )
action = "move_left"
visibility_mode = 1

[node name="up" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 218, 571 )
scale = Vector2( -4.56125, -4.1349 )
normal = ExtResource( 6 )
shape = SubResource( 2 )
action = "move_up"
visibility_mode = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
